[package]
name = "fowlder"
description = "A helper for managing, searching and viewing academic papers"
version = "0.1.0"
authors = ["Felix Glinka <fglinka@posteo.eu>"]
license = "MIT"

[dependencies]
# for persisting data
serde = "1"
# for making defining serde traits easier
serde_derive = "1"
# for storing data as a JSON file
serde_json = "1"
sha2 = "0.8"
# already included by nom-bibtex
quick-error = "1"

[dependencies.generic-array]
version = "0.12"
features = ["serde"]
