[package]
name = "fowlder"
description = "A helper for managing, searching and viewing academic papers"
version = "0.1.0"
authors = ["Felix Glinka <fglinka@posteo.eu>"]
license = "MIT"

[dependencies]
# for persisting data
serde = "1"
# for making defining serde traits easier
serde_derive = "1"
# for storing data as a JSON file
serde_json = "1"
# for storing configuration files
serde_yaml = "0.8"
# for calculating file digests
sha2 = "0.8"
# used to parse parts of loaded files
nom = "3"
# for importing .bib files
nom-bibtex = "0.2"
# already included by nom-bibtex
quick-error = "1"
# used for managing the configuration instance
lazy_static = "1"
# used for determining config/data file paths
directories = "1"
# used for command parsing
clap = "2"
# used for formatting digests
hex = "0.3"

[dependencies.generic-array]
version = "0.12"
features = ["serde"]
