[package]
name = "reed"
description = "A helper for managing, searching and viewing academic papers."
version = "0.1.0"
authors = ["Felix Glinka <devglinka@posteo.eu>"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/fglinka/reed"
include = [
    "**/*.rs",
    "LICENSE*",
    "Cargo.toml",
    "README.md",
]

[dependencies]
# for persisting data
serde = "1"
# for making defining serde traits easier
serde_derive = "1"
# for storing data as a JSON file
serde_json = "1"
# for storing configuration files
serde_yaml = "0.8"
# for calculating file digests
sha2 = "0.8"
# enable generic_array strucures to be serialized
generic-array = { version = "0.12", features = ["serde"] }
# used to parse parts of loaded files
nom = "3"
# for importing .bib files
nom-bibtex = "0.2"
# already included by nom-bibtex
quick-error = "1"
# used for managing the configuration instance
lazy_static = "1"
# used for determining config/data file paths
directories = "1"
# used for command parsing
clap = {version = "2", features=["yaml"]}
# used for formatting digests
hex = "0.3"
